--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -422,6 +422,20 @@ footer a {
     top: -15px;
     left: 25px;
   }
+  #primosimbolo {
+    position: absolute;
+    left: 30px;
+    color: red;
+  }
+  #secondosimbolo {
+    color: #697ec1;
+  }
+  #terzosimbolo {
+    color: #697ec1;
+  }
+  #simboli {
+    float: right;
+  }
 }
 
 @media screen and (min-width: 577px) and (max-width: 768px) {
@@ -450,6 +464,18 @@ footer a {
     position: absolute;
     top: -15px;
     left: 25px;
+  }
+  #simboli {
+    float: right;
+  }
+  #primosimbolo {
+    color: red;
+  }
+  #secondosimbolo {
+    color: #697ec1;
+  }
+  #terzosimbolo {
+    color: #697ec1;
   }
 }
 
@@ -484,5 +510,17 @@ footer a {
     position: absolute;
     top: -15px;
     left: 25px;
+  }
+  #simboli {
+    float: right;
+  }
+  #primosimbolo {
+    color: red;
+  }
+  #secondosimbolo {
+    color: #697ec1;
+  }
+  #terzosimbolo {
+    color: #697ec1;
   }
 }
