--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -511,8 +511,15 @@ footer a {
     top: -15px;
     left: 25px;
   }
-  #simboli {
-    float: right;
+  .far {
+    background-color: rgb(255, 255, 255, 0.558);
+    padding: 12px 16px;
+    margin-bottom: 10px;
+    border: 2px solid white;
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    color: rgb(23, 67, 214);
+    font-size: 1.5em;
   }
   #primosimbolo {
     color: red;
